--- a/q1/q1/css/style.css
+++ b/q1/q1/css/style.css
@@ -1,2 +1,62 @@
 @charset "UTF-8";
 /* 回答はここから */
+.q1--soto {
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+.q1--align {
+  display: inline-block;
+  background-color: #a4b3e9;
+  padding: 10px;
+}
+.q1--sotoo {
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+.q1--margin {
+  background-color: #a4b3e9;
+  width: 90px;
+  padding: 10px;
+  margin: 0 auto;
+}
+.q1--table {
+  width: 100%;
+  height: 100%;
+  display: table;
+  margin: auto;
+}
+.q1--cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+.q1--cell2 {
+  display: inline-block;
+  padding: 10px;
+  background-color: #fff;
+}
+.q1--flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.q1--flex2 {
+  display: inline-block;
+  padding: 10px;
+  background-color: #fff;
+}
+.container {
+  position: relative;
+}
+.inbox {
+  display: inline-block;
+  padding: 10px;
+  background-color: #a4b3e9;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  position: absolute;
+}
