--- a/q2/q2/css/style.css
+++ b/q2/q2/css/style.css
@@ -1,2 +1,18 @@
 @charset "UTF-8";
 /* 回答はここから */
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  justify-content: center;
+}
+li {
+  background-color: #d2b48c;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 13px;
+  box-shadow: 0 0 0 6px #655;
+  width: 220px;
+  margin: 30px;
+	outline: 10px solid #655;
+}
